# ejp-t

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  init.vim  main.c  repo1-title0_result.csv  repo1-title2_score.csv  studentList.csv  users_info.csv  users_repo.csv  write  write.c
.devcontainer/: devcontainer.json
.ejs/: common.h  diff.c  result.c
.ejs/repos/home0/repo0/: info.json
.github/workflows/: cmake.yml
include/: cJSON.h  common.h  git.h  http.h  info.h  parse.h  sha256.h
includes/: .http.h.swp  common.h  diff.h  http.h  info.h  parse.h  sha256.h
lib/: CMakeLists.txt  common.c  diff.c  git.c  http.c  info.c  parse.c  sha256.c
scripts/: install.sh  setup.sh
src/: CMakeLists.txt  main.c  manage.c  manage.service.c  repo.c  workbook.c  workbook.service.c
test/: CMakeLists.txt  main.c
testcase/: a.json  b.json  exampl0.json  info.json
workbook0/testcase/: a.input  a.json  a.output  info.json
